<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:layout_margin="20dp"
    tools:context=".MainActivity">

    <LinearLayout
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical">

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/ingreso"
            android:textAlignment="center"
            android:textSize="26dp"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintRight_toRightOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginLeft="20dp"
        android:text="@string/Nombre">

    </TextView>

    <EditText
        android:id="@+id/nombreLogin"
        android:layout_margin="20dp"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:inputType="textPersonName"

        android:hint="@string/ingreseNombre"
        tools:ignore="LabelFor">
    </EditText>



        <TextView
        android:layout_marginLeft="20dp"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/Contraseña">
    </TextView>
    <EditText
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/passwordLogin"
        android:inputType="textPassword"
        android:hint="@string/ingreseContraseña"
        android:layout_margin="20dp"
        >
    </EditText>

    <Button
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="20dp"
        android:id="@+id/btnIniciar"
        android:text="@string/Ingresar">
    </Button>
    <Button
        android:id="@+id/btnRegistrar"
        android:text="@string/Registrar"
        android:layout_height="wrap_content"
        android:layout_width="match_parent"
        android:layout_margin="20dp">
    </Button>




</LinearLayout>

</androidx.constraintlayout.widget.ConstraintLayout>